[project]
name = "keyboards"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "slava.istomin@tuta.io"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "keymap-drawer (==0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
